[package]
name = "st-conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/RustAudio/rust-jack", branch = "main" }
clap = { version = "3.2.21", features = ["derive"] }
libc = "0.2"
st_sync = { version = "0.1", path="../st-sync" }
tokio = { version = "1.18.2", features = [ "full" ] }

[profile.release]
opt-level = 2
